plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.2'
    id 'io.spring.dependency-management' version '1.1.2'
}

group = 'com.sparta'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Web, security, thymleaf, mysql,jwt,validation...

    // AWS
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // JWT
    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

    //validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // MySQL
    implementation 'com.mysql:mysql-connector-j'
    // h2
    implementation 'com.h2database:h2'
    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.0.4'
    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // Email
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    //Spring web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //Security
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //SMTP
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
    
    // redis transaction
    implementation('org.springframework:spring-tx:6.0.6')
}

tasks.named('test') {
    useJUnitPlatform()
}
